syntax = "proto3";

message Article {
  string id = 1;
  string author_id = 2;
  string category = 3;
  string markdown = 4;
  string created_at = 5;
  string updated_at = 6;
}

message GetArticleByIdRequest {
  string id = 1;
}

message CreateArticleRequest {
  Article article = 1;
}

message ArticleResponse {
  Article article = 1;
}

service UserService {
  rpc GetArticleById(GetArticleByIdRequest) returns (ArticleResponse);
  rpc CreateArticle(CreateArticleRequest) returns (ArticleResponse);
}